# yocto-workspaces

./: .gitignore  README.md  base.yml  pyproject.toml  rpi4_poky.yml
includes/: meta-openembedded.yml  meta-raspberry.yml
