[tool.poetry]
name = "yocto-workspaces"
version = "0.1.0"
description = "Yocto workspace managed with KAS"
authors = ["Pierre Neumann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kas = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
